# dl4cv-competitions

./: .gitignore  README.md  pyproject.toml  report.md
football/: .env.example  football-v8s.ipynb  football.ipynb  football.yaml  intro.ipynb
traffic-sign-detection/: data.yaml  experiments.ipynb  traffic-sign-detection.ipynb
traffic-sign-detection/utils/: data.py  inference.py  train.py  viz.py
vehicletype-10/: cartype-starter-notebook.ipynb  vehicletype-classification.ipynb
