[project]
name = "dl4cv-competitions"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "ultralytics",
    "jupyter",
    "jupyterlab",
    "ipywidgets",
    "ipykernel",
    "kaggle",
    "numpy",
    "pandas",
    "polars",
    "opencv-python",
    "matplotlib",
    "scikit-learn",
    "scipy",
    "pillow",
    "tqdm",
    "pyyaml",
    "python-dotenv",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"

[tool.uv.sources]
torch = [{ index = "pytorch-rocm" }]
torchvision = [{ index = "pytorch-rocm" }]
